# cpp-vulkan-playground

./: .clang-format  .gitignore  CMakeLists.txt  cpp-vulkan-playground.cap  vcpkg.json
assets/: gltf_test.blend  gltf_test.glb  gltf_test_plane.blend  gltf_test_plane.glb  sponza.glb  test.frag  test.vert
assets/shaders/: test.frag
cmake/: compiler_config.cmake  dependencies.cmake  vcpkg_toolchain.cmake
src/: Allocator.h  Application.cpp  Application.h  Camera.cpp  Camera.h  CommandPool.cpp  CommandPool.h  Descriptors.cpp  Descriptors.h  FrameResource.h  Framebuffer.cpp  Framebuffer.h  GraphicsBackend.cpp  GraphicsBackend.h  Image.cpp  Image.h  Input.cpp  Input.h  Logger.cpp  Logger.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLoader.cpp  ShaderLoader.h  ShaderObject.cpp  ShaderObject.h  StagingBuffer.cpp  StagingBuffer.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UniformBuffer.h  libraries.cpp  main.cpp
src/debug/: Performance.cpp  Performance.h  Tracy.cpp  Tracy.h
src/glfw/: Context.cpp  Context.h  Input.cpp  Input.h  Window.cpp  Window.h
src/gltf/: Gltf.cpp  Gltf.h
src/imgui/: ImGui.cpp  ImGui.h
src/util/: buffer_struct.h  static_vector.h
vcpkg-overlay-ports/cpptrace/: portfile.cmake  usage
